# wasm_bindgen-tauri

./: Cargo.toml  README.md  index.html
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
